--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Hunter Brown's Github Pages Website : ">
+    <meta name="description" content="Mbrow143.GitHub.io: ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/mbrow143">View on GitHub</a>
 
-          <h1 id="project_title">Mbrow143.GitHub.io</h1>
+          <h1 id="project_title">Hunter Brown's Github Website</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
