--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
   <head>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/mbrow143">View on GitHub</a>
 
-          <h1 id="project_title">Mbrow143.GitHub.io</h1>
+          <h1 id="project_title">Hunter Brown's Website</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
